--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -36,16 +36,21 @@
   <div class="row">
     <div class="col-xs-12">
       <%= form_tag orders_path do %>
+
+        <% if session[:user_id] %>
         <script
           src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-amount="<%= @cart_total * 100 %>"
           data-name="Jungle"
-          data-description="Khurram Virani's Jungle Order"
+          data-description=<%= User.find(session[:user_id]).firstname %>
           data-locale="auto"
-          data-email="kvirani@gmail.com"
+          data-email= <%= User.find(session[:user_id]).email %>
           data-currency="cad">
         </script>
+        <% else %>
+          <%= link_to 'Log in',  '/login' %> Please Log in First
+        <% end %>
       <% end %>
     </div>
   </div>
