--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -41,7 +41,7 @@
         <script
           src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-amount="<%= @cart_total * 100 %>"
+          data-amount= <%= @cart_total * 100 %>
           data-name="Jungle"
           data-description=<%= User.find(session[:user_id]).firstname %>
           data-locale="auto"
