--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -29,8 +29,11 @@
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-
+            <% if session[:username] && session[:password] %>
+            <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span><span><%= link_to 'Admin Logout', '/admin/logout' %></span>
+            <% else %>
             <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
+            <% end %>
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
